# nuclia-eval

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
src/nuclia_eval/: __init__.py  exceptions.py  settings.py  utils.py
src/nuclia_eval/metrics/: __init__.py  answer_relevance.py  base.py  context_relevance.py  groundedness.py  groundedness_ctx_relevance.py
src/nuclia_eval/models/: __init__.py  base.py  evaluate.py  remi.py
src/nuclia_eval/templates/: answer_relevance.py  context_relevance.py  groundedness.py  groundedness_ctx_relevance.py
tests/: conftest.py  test_evaluate.py
tests/models/: test_remi.py
